--- a/currentViewer.html
+++ b/currentViewer.html
@@ -110,7 +110,7 @@
             .addEventListener("click", clearSpatialFilter);
           document
             .getElementById("switchViewer")
-            .addEventListener("click", function() {
+            .addEventListener("click", function () {
               window.location.href = "./classicViewer.html";
             });
         }
@@ -209,7 +209,29 @@
         }
 
         function onMessage(msg) {
-          if (msg.error) alert(msg.error[0]);
+          if (msg.error) {
+            alert(sg.error[0]);
+          } else if (msg.filter) {
+            if (
+              msg.filter.hasOwnProperty("where") ||
+              msg.filter.hasOwnProperty("geometry")
+            ) {
+              alert(
+                "Successfully updated the filter. \nAttribute Filter: " +
+                  (msg.filter.where || "") +
+                  "\nSpatial Filter: " +
+                  (msg.filter.geometry
+                    ? typeof msg.filter.geometry === "object"
+                      ? JSON.stringify(msg.filter.geometry)
+                      : msg.filter.geometry
+                    : "")
+              );
+            } else {
+              alert(
+                "Successfully updated the filter. \n\nAttribute Filter: \n Spatial Filter: "
+              );
+            }
+          }
         }
 
         /************************************************
