Added clearObservations, filters, and subscribeUnsubscribe

--- a/currentViewer.html
+++ b/currentViewer.html
@@ -8,7 +8,7 @@
       href="https://js.arcgis.com/4.25/esri/themes/light/main.css"
     />
     <link rel="stylesheet" href="./streamServiceViewerStyles.css" />
-    <script src="https://js.arcgis.com/4.25/"></script>
+    <script src="https://js.arcgis.com/4.26/"></script>
     <script>
       require([
         "esri/Map",
@@ -40,6 +40,7 @@
           sketchViewModel,
           sketchViewModelLayer,
           streamLayer,
+          streamLayerView,
           spatialFilter,
           expressionFilter;
 
@@ -88,7 +89,9 @@
               case "complete":
                 spatialFilter = obj.graphic.geometry.extent;
                 drawSpatialFilter(spatialFilter);
-                if (streamLayer) streamLayer.geometryDefinition = spatialFilter;
+                if (streamLayer) {
+                  streamLayer.sendMessageToSocket({filter:{geometry: JSON.stringify(spatialFilter.clone().expand(0.5))}});
+                }
                 document
                   .getElementById("clearSpatialFilter")
                   .classList.remove("esri-button--disabled");
@@ -116,6 +119,9 @@
             .getElementById("toggleStreamLayer")
             .addEventListener("click", toggleStreamLayer);
           document
+            .getElementById("subscribeUnsubscribe")
+            .addEventListener("click", toggleSubscription);
+          document
             .getElementById("applyWhereClause")
             .addEventListener("click", applyWhereClause);
           document
@@ -124,6 +130,15 @@
           document
             .getElementById("clearSpatialFilter")
             .addEventListener("click", clearSpatialFilter);
+          document
+            .getElementById("clearPreviousObservations")
+            .addEventListener("click", function () {
+              if (streamLayer) {
+                streamLayer.sendMessageToClient({
+                  type: "clear"
+                });
+              }
+            });
           document
             .getElementById("switchViewer")
             .addEventListener("click", function () {
@@ -162,6 +177,23 @@
          * Functions to add and remove Stream Layer
          *
          *************************************************/
+        function toggleSubscription() {
+          if (
+            streamLayerView &&
+            streamLayerView.connectionStatus === 'paused'
+          ) {
+            streamLayerView.resume();
+            document
+              .getElementById("subscribeUnsubscribe")
+              .innerText = "Unsubscribe";
+          } else {
+            streamLayerView.pause();
+            document
+              .getElementById("subscribeUnsubscribe")
+              .innerText = "Subscribe";
+          }
+        }
+
         function toggleStreamLayer() {
           streamLayer ? removeStreamLayer() : addStreamLayer();
         }
@@ -185,15 +217,9 @@
 
           //When layer loads, register listeners for layer events and add layer to map
           mapView.whenLayerView(streamLayer).then(function (layerView) {
+            streamLayerView = layerView;
             onLayerAdded();
 
-            layerView.watch("connectionStatus", function (value) {
-              if (value === "connected") {
-                onLayerAdded();
-              } else {
-                onLayerRemoved();
-              }
-            });
             layerView.watch("connectionError", function (error) {
               removeStreamLayer();
               createToaster("Error connecting to the Stream Service", "error");
@@ -225,7 +251,7 @@
             .classList.remove("esri-button--disabled");
           document
             .getElementById("clearPreviousObservations")
-            .classList.remove("esri-button-disabled");
+            .classList.remove("esri-button--disabled");
         }
 
         function onLayerRemoved() {
@@ -234,6 +260,9 @@
           document
             .getElementById("subscribeUnsubscribe")
             .classList.add("esri-button--disabled");
+          document.
+            getElementById("subscribeUnsubscribe")
+            .innerText = "Unsubscribe";
           document
             .getElementById("clearPreviousObservations")
             .classList.add("esri-button--disabled");
@@ -274,8 +303,9 @@
          ************************************************/
         function applyWhereClause() {
           expressionFilter = document.getElementById("expressionFilter").value;
-          if (streamLayer)
-            streamLayer.definitionExpression = expressionFilter || null;
+          if (streamLayer) {
+            streamLayer.sendMessageToSocket({filter:{where: expressionFilter}});
+          }
         }
 
         function applySpatialFilter() {
@@ -349,7 +379,6 @@
             <button
               id="subscribeUnsubscribe"
               class="esri-button esri-button--disabled"
-              title="This feature is currently unavailable with the current version of the JSAPI"
             >
               Unsubscribe
             </button>
@@ -358,7 +387,6 @@
             <button
               id="clearPreviousObservations"
               class="esri-button esri-button--disabled"
-              title="This feature is currently unavailable with the current version of the JSAPI"
             >
               Clear Previous Observations
             </button>
