Add API to checkbox label

--- a/currentViewer.html
+++ b/currentViewer.html
@@ -581,7 +581,7 @@
               class="esri-input"
               type="checkbox"
             />
-            <label for="useSendMessageToSocket">Use sendMessageToSocket</label>
+            <label for="useSendMessageToSocket">Use sendMessageToSocket API</label>
           </div>
         </div>
       </section>
