default Stream Server URL typo fix

--- a/currentViewer.html
+++ b/currentViewer.html
@@ -519,7 +519,7 @@
               id="streamServiceUrl"
               class="esri-input"
               placeholder="Stream layer url"
-              value="https:/geoeventsample1.esri.com/server/rest/services/FAAStream/StreamServer"
+              value="https://geoeventsample1.esri.com/server/rest/services/FAAStream/StreamServer"
             />
           </div>
           <div class="input-group input-group-full">
